# FREEAI

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  wrangler.jsonc
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_usage_and_strategies.py  0003_fix_quarantine_heal.py  0004_client_rate_limit.py  0005_admin_token_hash.py  0006_ttfb_and_bigint.py  0007_fix_reserve_race.py  0008_strategy_dsl.py  0009_rename_latency_field.py  0010_tpd_limit.py  0011_scoring_optimizations.py  0012_users_and_jwt.py  0013_user_providers.py  0014_multiuser_scoping.py  0015_backfill_usage_user_id.py  0016_fix_orphaned_provider_keys.py  0017_analytics_daily_rollup.py  0018_user_provider_max_retries.py  0019_circuit_breaker_config.py  0020_model_pricing.py
backend/app/: auth.py  auto_strategy.py  bootstrap.py  config_store.py  crypto.py  embeddings.py  lifecycle.py  logging_config.py  main.py  metrics.py  orchestrator.py  rate_counters.py  rate_tracker.py  schemas.py  security.py  settings.py  strategy_dsl.py  transcription.py  virtual_models.py
backend/app/db/: __init__.py  engine.py  models.py  session.py
backend/app/providers/: __init__.py  base.py  cerebras_provider.py  cohere_provider.py  gemini_provider.py  groq_provider.py  huggingface_provider.py  known_models.py  mistral_provider.py  openai_compat.py  openrouter_provider.py
backend/tests/: conftest.py  test_auto_strategy.py  test_cerebras_provider.py  test_client_rate_repo.py  test_client_repo.py  test_config_repo.py  test_crypto.py  test_embeddings_providers.py  test_known_models.py  test_main_endpoints.py  test_migration_0009.py  test_orchestrator.py  test_orchestrator_retry_budget.py  test_pricing_repo.py  test_provider_robustness.py  test_rate_repo.py  test_schema_tool_calls.py  test_security_integration.py  test_setup_api.py  test_strategy_dsl.py  test_strategy_repo.py  test_streaming.py  test_usage_repo.py  test_usage_repo_rollup.py  test_virtual_models.py
docs/: API.md  (+7 more)
(+44 files in other folders)
